# main

./: .gitignore  README.md  README_cia_downloader.md  archive_content_processor.py  archive_org_downloader.py  cia_reading_room_downloader.py  convert_to_bin.py  correct_pins_qspi.py  display_test_v2.py  download_dump.py  game_wiki_query.py  menu_system.py  menu_with_touch.py  micropython_page.html  pika_fixed_info.txt  pin_finder.py  pin_mode_image_uploader.py  requirements.txt  wiki_game_processor.py
ESP32_Control_Center/: platformio.ini
ESP32_Control_Center/src/: Kconfig.projbuild
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/: CMakeLists.txt  main.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/Audio_Driver/: PCM5101.h
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/BAT_Driver/: BAT_Driver.h
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/EXIO/: TCA9554PWR.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/LCD_Driver/: Display_SPD2010.c  Display_SPD2010.h
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/LVGL_Driver/: LVGL_Driver.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/LVGL_UI/: LVGL_Music.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/MIC_Driver/: MIC_Speech.c  MIC_Speech.h
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/SD_Card/: SD_MMC.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/Touch_Driver/: Touch_SPD2010.c
ESP32_Demo/ESP-IDF/ESP32-S3-Touch-LCD-1.46-Test/main/Wireless/: Wireless.c
ESP32_IDF_Project/: PROJECT_NOTES.txt  README_GIF_CONVERTER.md  convert_gif_to_bin.py  convert_icon_to_c.py  convert_simple_icon.py  convert_to_lvgl.py  gif_converter_gui.py  laughingman_cli_info.txt  laughingman_info.txt  platformio.ini  resize_icon.py  sdkconfig.defaults  sdkconfig.defaults.backup  sdkconfig.esp32-s3-devkitc-1  upload_icon.py
ESP32_IDF_Project/backup_20260131_103231/: Display_SPD2010.h.bak  main.c.bak  (+1 more)
esp32_menu_projectold/: lv_conf.h  platformio.ini
(+78 files in other folders)
